--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: shake_animation_widget
 description: 抖动动画组件
-version: 0.0.1
-author:
-homepage:
+version: 1.0.0
+homepage: https://github.com/zhaolongs/flutter_shake_animation_widget.git
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-
+  sdk: ">=2.2.0 <3.0.0"
+  flutter: ">=1.12.0 <2.0.0"
 dependencies:
   flutter:
     sdk: flutter
