--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: shake_animation_widget
-description: 抖动动画组件
-version: 1.0.1
+description: 抖动动画、向上弹出动画
+version: 2.0.0
 homepage: https://github.com/zhaolongs/flutter_shake_animation_widget.git
 
 environment:
